app/manifests/echoserver.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled # Включаем инжект сайдкаров Istio для неймспейса

---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32080
      targetPort: 8080
      name: "http"  # Istio требует явного указания протокола при определенных настройках
  selector:
    app: echoserver

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: echoserver
      version: "1"
  template:
    metadata:
      labels:
        app: echoserver
        version: "1"
    spec:
      containers:
        - name: echoserver
          image: proxy-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
